# lseq

./: .gitignore  CMakeLists.txt  README.md  TODO.md  common.h  error.h  event.h  jackmidi.h  launchpad.h  lseq.h  main.cc  sequence.cc  sequence.h  sequencer.h  ui.cc  ui.h
src/: common.h  error.h  event.h  jackmidi.h  launchpad.h  lseq.h  main.cc  project.h  router.h  sequence.cc  sequence.h  sequencer.h  track.h  ui.cc  ui.h  util.h
